--- a/slides/slides.html
+++ b/slides/slides.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Introduction to SIMD</title>
     <link rel="stylesheet" href="/jmacey/js/reveal.js/css/reveal.css">
+    <link rel="stylesheet" href="/jmacey/js/reveal.js/reveal.js-fullscreen-code.css">
     <link rel="stylesheet" href="/jmacey//js/reveal.js/css/theme/white.css" id="theme">
     <link rel="stylesheet" href="/jmacey//js/reveal.js/lib/css/zenburn.css">
     <link rel="stylesheet" href="/jmacey/js/reveal.js/jonstyle.css">
